# CubeOptimizer

./: .clang-format  CMakeLists.txt  LICENSE.txt
src/: cube.cpp  cube.h
test/: cube_tests.cpp
